--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,24 +2,22 @@ name: Release
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    branches: [main]
 
 jobs:
-  windows:
+  linux:
     strategy:
       matrix:
-        arch: ["x86-64-vnni512", "x86-64-bmi2", "x86-64-modern"]
-    runs-on: windows-2022
+        arch: ["x86-64-bmi2"]
+    runs-on: ubuntu-18.04
 
     steps:
       - uses: actions/checkout@v3
 
-      - name: make largeboards
-        run: cd src && make clean && make -j build COMP=mingw ARCH=${{ matrix.arch }} EXE=${{ matrix.arch }}.exe largeboards=yes && strip ${{ matrix.arch }}.exe
+      - name: make
+        run: cd src && make clean && make -j build COMP=gcc ARCH=${{ matrix.arch }} EXE=${{ matrix.arch }} largeboards=yes && strip ${{ matrix.arch }}
 
       - uses: actions/upload-artifact@v3
         with:
-          name: fairy-stockfish
-          path: src/x86-64-*.exe
+          name: fairy-stockfish-linux
+          path: src/x86-64*
